# crankshaft

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
crankshaft/: __init__.py
crankshaft/modules/: api.bolt  config.bolt  cwd.bolt  defer.bolt  event_handler.bolt  events.bolt  flag.bolt  flag_handler.bolt  flags.bolt  utils.bolt
docs/: build.bat
docs/source/: conf.py  index.rst  installation.rst  using_flags.rst
examples/basic/: beet.yml
examples/docs_custom_load/: beet.yml
examples/docs_magic_wand/: beet.yml
examples/event_handler_custom3/: beet.yml
tests/snapshots/: examples__build_basic_event2__0.pack.md  examples__build_basic_event3__0.pack.md  examples__build_basic_event4__0.pack.md  examples__build_basic_event5__0.pack.md  examples__build_basic_event6__0.pack.md  examples__build_basic_event__0.pack.md  examples__build_custom_event__0.pack.md  examples__build_docs_custom_load__0.pack.md  examples__build_docs_magic_wand__0.pack.md  examples__build_event_handler_basic2__0.pack.md  examples__build_event_handler_basic3__0.pack.md  examples__build_event_handler_basic4__0.pack.md  examples__build_event_handler_basic5__0.pack.md  examples__build_event_handler_basic6__0.pack.md  examples__build_event_handler_basic__0.pack.md  examples__build_event_handler_basic_class__0.pack.md  examples__build_event_handler_basic_instance__0.pack.md  examples__build_event_handler_basic_lazy__0.pack.md  examples__build_event_handler_custom2__0.pack.md  examples__build_event_handler_custom3__0.pack.md  (+10 more)
(+134 files in other folders)
